# big-boy-computer

./: INSTRUCTIONS  README.md  execute.hpp  main.cpp  types.hpp
examples/: echo  pixels  stack
src/: CMakeLists.txt  execute.hpp  main.cpp  pixplot.hpp  types.hpp
